qs#7